// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render OrdersSummary with 1 order 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      order
        
      <span />
       
      from 
      <span>
        Jan 1st 1970
      </span>
       to 
      <span>
        Jan 1st 1970
      </span>
      , totalling
      <span>
         $225.00
      </span>
    </h2>
    <div
      className="page-header__action"
    >
      <Link
        className="button"
        to="/order/create"
      >
        Add Order
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render OrdersSummary with multiple orders 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Viewing 
      <span>
        13
      </span>
       
      orders
        
      <span />
       
      from 
      <span>
        Jan 1st 1970
      </span>
       to 
      <span>
        Jan 1st 1970
      </span>
      , totalling
      <span>
         $12,355.00
      </span>
    </h2>
    <div
      className="page-header__action"
    >
      <Link
        className="button"
        to="/order/create"
      >
        Add Order
      </Link>
    </div>
  </div>
</div>
`;
